package com.restaurante.model.domain.enums;

public enum EstadoCuenta {
    ABIERTA,
    CERRADA
}

